# xhznl-todo-list-tauri

./: CLAUDE.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  settings.rs  todo.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/models/: mod.rs  settings.rs  todo.rs
src-tauri/src/tray/: setup.rs
src/components/layout/: TitleBar.tsx  index.ts
src/components/settings/: SettingsPanel.tsx  index.ts
src/components/todo/: TodoInput.tsx  TodoItem.tsx  TodoList.tsx  index.ts
src/hooks/: index.ts  useAlwaysOnTop.ts  useMousePenetration.ts  useWindowState.ts
src/services/: autostart.ts  database.ts  index.ts  settings.ts  window.ts
src/stores/: index.ts  settingsStore.test.ts  settingsStore.ts  todoStore.test.ts  todoStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts  settings.ts  todo.ts
