[package]
name = "xhznl-todo-list"
version = "1.0.2"
description = "A Tauri Todo List App"
authors = ["xiajingren"]
edition = "2021"

[lib]
name = "xhznl_todo_list_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.64"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
